libs/slim/test/typecheck/fail/index_not_indexable.shader
shader vertex {
    int foo = 0;
    foo[0];
    return vec4(0.0, 0.0, 0.0, 1.0);
}
